fix: standardize code formatting across multiple files